<resources>
    <string name="app_name">My Application</string>
    <string name="button_name">Button</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="message_error">Message is Required!</string>
    <string name="message_kosong">Message Kosong!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="attemptleft">Attempt Left :</string>
    <string name="yourMessage">Your Message is </string>
    <string name="register">Registrasi </string>
    <string name="logout">Logout</string>
    <string name="loginlah">Login Lah</string>

    <string name="facebook_app_id">282236418621583</string>
    <string name="fb_login_protocol_scheme">fb282236418621583</string>

    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="favorite">Favorite</string>
    <string name="account">Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="fcm_token">FCM Token: %s</string>
    <string name="channelid">notif1</string>
    <string name="channelname">danunotif</string>

    <string name="quickstart_message">Click the SUBSCRIBE TO WEATHER button below to subscribe to the
        weather topic. Messages sent to the weather topic will be received. The LOG TOKEN button logs the
        InstanceID token to logcat.</string>
    <string name="subscribe_to_weather">Subscribe To Weather</string>
    <string name="log_token">Log Token</string>

    <string name="msg_subscribed">Subscribed to weather topic</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>

    <!--
        This is the name that users will see when interacting with this channel.
        It should describe the category of notifications that will be sent through this channel
     -->
    <string name="msg_subscribe_failed">Failed to subscribe to weather topic</string>
    <string name="fcm_message">FCM Message</string>

</resources>
